[project]
name = "ai-engineering-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.20",
    "anthropic>=0.25",
    "datasets>=2.14",
    "huggingface-hub>=1.20.1",
    "jupyter>=1.0",
    "librosa>=0.10",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openai>=1.0",
    "pandas>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "soundfile>=0.12",
    "tiktoken>=0.5",
    "tokenizers>=0.13",
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
]
